[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=40.8.0", "wheel", "versioneer-518"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["interpax/*.py", "tests/*.py"]
exclude = ["interpax/_version.py",
]
