[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = interpax/_version.py
versionfile_build = interpax/_version.py
tag_prefix = v
parentdir_prefix = interpax-


[coverage:run]
# Settings to control coverage.py or pytest with coverage flags: "--cov" (requires pytest-cov)
# we only care about the coverage of the source itself
# otherwise it measures coverage of the tests themselves as well
source =
       interpax/

# _version.py is generated code, no need to count it
omit =
     interpax/_version.py

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:

ignore_errors = True


[tool:pytest]
markers=
	unit: marks small unit tests
	regression: marks end to end regression tests
	slow: marks tests as slow (deselect with 'pytest -m "not slow"').
	fast: mark tests as fast.
filterwarnings=
    error
    ignore::pytest.PytestUnraisableExceptionWarning
    # Ignore division by zero warnings.
    ignore:numpy.ndarray size changed:RuntimeWarning
    # ignore benign Cython warnings on ndarray size
    ignore::DeprecationWarning:ml_dtypes.*
    # ignore benign ml_dtypes DeprecationWarning

[flake8]
# Primarily ignoring whitespace, indentation, and commenting etiquette that black does not catch
# These will be fixed in a code-cleaning branch in the future
ignore =
    # Let black handle whitespace line breaks and stuff like that
    E1, E2, W503, W504, W505,
    # multiline statements are ok sometimes
    E704,
    # lambda expressions are useful
    E731,
    # variable names like "l" are pretty common for mode numbers
    E741,
    # don't want to always use "imperative mood" in docstrings
    D401,
    # don't care about docstrings in __dunder__ methods
    D105,
    # ignore conflicts with jaxtyping
    F722

per-file-ignores =
    # need to import things to top level even if they aren't used there
    interpax/__init__.py: F401
    tests/*: D100, D101, D102, D103, D106

max-line-length = 88
exclude = docs/*, build/*, local/*, .git/*, versioneer.py, interpax/_version.py
max-complexity = 15
docstring-convention = numpy

[isort]
profile=black
src_paths=interpax,test


[requirements-files]
# setuptools does not support "file:", so use a extra package for this:
# https://pypi.org/project/setuptools-declarative-requirements/
# https://github.com/pypa/setuptools/issues/1951#issuecomment-718094135
install_requires = requirements.txt
setup_requires = requirements-dev.txt
